--- a/_src/index.html
+++ b/_src/index.html
@@ -1,4 +1,3 @@
-pro
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 
@@ -9,16 +8,16 @@ pro
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="theme-color" content="#000000">
   <link rel="stylesheet" href="css/materialize.css" media="screen,projection">
-  <link rel="stylesheet" href="css/sweetalet.css">
+  <link rel="stylesheet" href="css/sweetalert.css">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/responsive.css">
+  <link rel="stylesheet" href="fonts/font-awesome-4.6.2/css/font-awesome.min.css">
   <link rel='stylesheet' href='http://weloveiconfonts.com/api/?family=entypo' type='text/css'>
   <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Overlock:400,700|
               Oswald|Roboto:400,400italic,700,700italic|Bangers|Orbitron:900,400' type='text/css'>
   <title>Meme... He said Meeemeee.</title>
 </head>
 
-<body>
+<body class="grey lighten-3">
   <div class="container">
     <div class="section">
       <div class="row">
@@ -38,17 +37,15 @@ pro
     </div>
     <div class="section">
       <div class="row">
-        <div class="col s12">
-          <canvas id="memeSpace">
-            Sorry... Your browser doesn't support canvas... Try Googling "Chrome".
-          </canvas>
-        </div>
+        <canvas id="memeSpace" class="col s12">
+          Sorry... Your browser doesn't support canvas... Try Googling "Chrome".
+        </canvas>
       </div>
       <div class="card-panel z-depth-2">
         <div class="row">
           <div class="col s6">
             <p class="range-field">
-              <input id="scale" type="range" min="0.05" max="4" value="1" step="0.01" />
+              <input id="scale" type="range" min="0.05" max="4" value="1" step="0.1" />
               <label for="scale">Image Scale</label>
             </p>
           </div>
@@ -71,13 +68,30 @@ pro
           </div>
         </div>
 
-        <br />
-        <span style="width:45%;float:left">Load image: <input type="file" capture="camera" id="fileInput" name="imageLoader" /></span>
-        <span style="width:45%;float:right"><a href="" id="img-download" download="you-got-memed.png" >Download image</a> OR
-                <input type='button' id='save' value='Save online' /></span>
+        <!-- File Functions -->
+        <div class="row">
+          <div class="file-field input-field col s6">
+            <div class="btn">
+              <span>File</span>
+              <input type="file" capture="camera" id="fileInput" name="imageLoader">
+            </div>
+            <div class="file-path-wrapper">
+              <input class="file-path validate" type="text">
+            </div>
+          </div>
+          <div class="right">
+            <a class="waves-effect waves-light btn-large" href="" id="img-download" download="you-got-memed.png"><i class="fa fa-download right"></i>download</a>
+          </div>
+          <div class="left">
+            <button class="waves-effect btn-large" id="save">save online
+              <i class="fa fa-floppy-o right"></i>
+            </button>
+          </div>
+        </div>
       </div>
       <span id="spinner-div" style="display:none"><img src='img/key/spinner-128.gif' width='24' height='24' id='spinner'/></span>
     </div>
+
     <footer class="page-footer indigo">
       <div class="container">
         <div class="row">
