--- a/_src/index.html
+++ b/_src/index.html
@@ -7,6 +7,7 @@
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="theme-color" content="#000000">
+  <link rel="manifest" href="manifest.json">
   <link rel="stylesheet" href="css/materialize.css" media="screen,projection">
   <link rel="stylesheet" href="css/sweetalert.css">
   <link rel="stylesheet" href="css/style.css">
