Refactor: Layout Tidying

--- a/_src/index.html
+++ b/_src/index.html
@@ -25,10 +25,8 @@
           <div class="card-panel grey lighten-5 z-depth-2">
             <div class="row valign-wrapper">
               <div class="col s12">
-                <h3>Mark N Carpenter Jr.</h3>
-                <h5>Frontend Web Developer</h5>
-                <div class="divider"></div>
-                <p>"Now With EVEN MORE Canvas!"</p>
+                <h4>MEMEGen</h4>
+                <h5>Make MeMe's Not Love.</h5>
               </div>
             </div>
           </div>
@@ -80,12 +78,12 @@
             </div>
           </div>
           <div class="left">
-            <button class="waves-effect btn-large" id="save">save online
+            <button class="waves-effect btn" id="save">save online
               <i class="fa fa-floppy-o right"></i>
             </button>
           </div>
           <div class="right">
-            <a class="waves-effect waves-light btn-large" href="" id="img-download" download="you-got-memed.png"><i class="fa fa-download right"></i>download</a>
+            <a class="waves-effect btn" href="" id="img-download" download="you-got-memed.png"><i class="fa fa-download right"></i>download</a>
           </div>
         </div>
       </div>
