refactor: Display Tidyness

--- a/_src/index.html
+++ b/_src/index.html
@@ -68,7 +68,7 @@
 
         <!-- File Functions -->
         <div class="row">
-          <div class="file-field input-field col s6">
+          <div class="file-field input-field col m12 l6">
             <div class="btn">
               <span>File</span>
               <input type="file" capture="camera" id="fileInput" name="imageLoader">
@@ -77,13 +77,15 @@
               <input class="file-path validate" type="text">
             </div>
           </div>
-          <div class="left">
-            <button class="waves-effect btn" id="save">save online
-              <i class="fa fa-floppy-o right"></i>
-            </button>
-          </div>
-          <div class="right">
-            <a class="waves-effect btn" href="" id="img-download" download="you-got-memed.png"><i class="fa fa-download right"></i>download</a>
+          <div class="col m12 l6">
+            <div class="left">
+              <button class="waves-effect btn" id="save">save
+                <i class="fa fa-floppy-o right"></i>
+              </button>
+            </div>
+            <div class="right">
+              <a class="waves-effect btn" href="" id="img-download" download="you-got-memed.png"><i class="fa fa-download right"></i>download</a>
+            </div>
           </div>
         </div>
       </div>
