refactor: doTransform Reference

--- a/_src/index.html
+++ b/_src/index.html
@@ -57,11 +57,11 @@
         <!-- Text Input -->
         <div class="row">
           <div class="input-field col s6">
-            <input id="topLineText" type="text" value="yes i have a beard" onkeyup='dotransform()' oninput='dotransform' onpaste='dotransform'>
+            <input id="topLineText" type="text" value="yes i have a beard" onkeyup='doTransform()' oninput='doTransform' onpaste='doTransform'>
             <label for="topLineText">Top Line:</label>
           </div>
           <div class="input-field col s6">
-            <input id="bottomLineText" type="text" value="it is awesome. . ." onkeyup='dotransform()' oninput='dotransform' onpaste='dotransform'>
+            <input id="bottomLineText" type="text" value="it is awesome. . ." onkeyup='doTransform()' oninput='doTransform' onpaste='doTransform'>
             <label for="bottomLineText">Bottom Line:</label>
           </div>
         </div>
