--- a/index.html
+++ b/index.html
@@ -21,64 +21,69 @@
         <div class="container">
             <div class="section">
                 <div class="row">
+                    <div class="card-panel grey darken-4 z-depth-1 col s12">
+                        <span class="white-text col s12">
+                            <h5>Make Dank MEMEs</h5>
+                        </span>
+                    </div>
+                </div>
+                <div class="row">
+                    <canvas id="memeSpace" class="col push-s1 s10 grey darken-3">
+                        Sorry... Your browser doesn't support canvas... Try Googling "Chrome".
+                    </canvas>
+                </div>
+                <div class="row">
                     <div class="col s12">
-                        <div class="card grey darken-4 z-depth-2">
-                            <div class="card-content white-text">
-                                <span class="card-title col s12">Make Dank MEMEs</span>
-                                <canvas id="memeSpace" class="col push-s2 s8">
-                                    Sorry... Your browser doesn't support canvas... Try Googling "Chrome".
-                                </canvas>
+                        <div class="card-panel grey darken-4 z-depth-1 white-text">
+                            <div class="row">
+                            <!-- Image Modifiers -->
+                                <span class="col s6">
+                                    <p class="range-field">
+                                        <input id="scale" type="range" min="0.1" max="4" value="1" step="0.1"/>
+                                        <label for="scale">Image Scale</label>
+                                    </p>
+                                </span>
+                                <span class="col s6">
+                                    <p class="range-field">
+                                        <input id="rotate" type="range" min="-180" max="180" value="0" step="1"/>
+                                        <label for="rotate">Image Rotation</label>
+                                    </p>
+                                </span>
                             </div>
-                            <div class="card-action">
-                                <div class="row">
-                                    <div class="col s6">
-                                        <p class="range-field">
-                                            <input id="scale" type="range" min="0.1" max="4" value="1" step="0.1"/>
-                                            <label for="scale">Image Scale</label>
-                                        </p>
-                                    </div>
-                                    <div class="col s6">
-                                        <p class="range-field">
-                                            <input id="rotate" type="range" min="-180" max="180" value="0" step="1"/>
-                                            <label for="rotate">Image Rotation</label>
-                                        </p>
-                                    </div>
-                                </div>
-                                <!-- Text Input -->
-                                <div class="row">
-                                    <div class="input-field col s6">
-                                        <input id="topLineText" type="text" value="yes i have a beard" onkeyup='doTransform()' oninput='doTransform' onpaste='doTransform'>
-                                        <label for="topLineText">Top Line:</label>
-                                    </div>
-                                    <div class="input-field col s6">
-                                        <input id="bottomLineText" type="text" value="it is awesome. . ." onkeyup='doTransform()' oninput='doTransform' onpaste='doTransform'>
-                                        <label for="bottomLineText">Bottom Line:</label>
-                                    </div>
-                                </div>
+                            <!-- Text Input -->
+                            <div class="row">
+                                <span class="input-field col s6">
+                                    <input id="topLineText" type="text" value="yes i have a beard" onkeyup='doTransform()' oninput='doTransform' onpaste='doTransform'>
+                                    <label for="topLineText">Top Line:</label>
+                                </span>
+                                <span class="input-field col s6">
+                                    <input id="bottomLineText" type="text" value="it is awesome. . ." onkeyup='doTransform()' oninput='doTransform' onpaste='doTransform'>
+                                    <label for="bottomLineText">Bottom Line:</label>
+                                </span>
+                            </div>
 
-                                <!-- File Functions -->
-                                <div class="row">
-                                    <div class="file-field input-field col push-m3 s12 m6">
-                                        <div class="btn red">
-                                            <span>File</span>
-                                            <input type="file" capture="camera" id="fileInput" name="imageLoader">
-                                        </div>
-                                        <div class="file-path-wrapper">
-                                            <input class="file-path validate" type="text">
-                                        </div>
+                            <!-- File Functions -->
+                            <div class="row">
+                                <div class="file-field input-field col push-m3 s12 m6">
+                                    <div class="btn red">
+                                        <span>File</span>
+                                        <input type="file" capture="camera" id="fileInput" name="imageLoader">
+                                    </div>
+                                    <div class="file-path-wrapper">
+                                        <input class="file-path validate" type="text">
                                     </div>
                                 </div>
-                                <div class="row">
-                                    <div class="col s12">
-                                        <div class="left">
-                                            <button class="waves-effect btn red" id="save">save
-                                                <i class="fa fa-floppy-o right"></i>
-                                            </button>
-                                        </div>
-                                        <div class="right">
-                                            <a class="waves-effect btn red" href="" id="img-download" download="you-got-memed.png">
-                                                <i class="fa fa-download right"></i>download</a>
-                                        </div>
+                            </div>
+                            <div class="row">
+                                <div class="col s12">
+                                    <div class="left">
+                                        <button class="waves-effect btn red" id="save">save
+                                            <i class="fa fa-floppy-o right"></i>
+                                        </button>
+                                    </div>
+                                    <div class="right">
+                                        <a class="waves-effect btn red" href="" id="img-download" download="you-got-memed.png">
+                                            <i class="fa fa-download right"></i>download</a>
                                     </div>
                                 </div>
                             </div>
