refactor: cleaned up loose code

--- a/_src/index.html
+++ b/_src/index.html
@@ -15,7 +15,6 @@
   <script src="js/imageManips.js"></script>
   <title>Meme... He said Meeemeee.</title>
 </head>
-
 <body class="grey darken-2">
   <div class="container">
     <div class="section">
@@ -25,7 +24,7 @@
         </div>
       </div>
       <div class="row">
-        <canvas id="memeSpace" class="col push-s1 s10 grey darken-3">
+        <canvas id="memeSpace" class="col s12 grey darken-3">
           Sorry... Your browser doesn't support canvas... Try Googling "Chrome".
         </canvas>
       </div>
