refactor: Night Vision Filter
Added night vision filter,
adjusted filter buttons for mobile.

--- a/_src/index.html
+++ b/_src/index.html
@@ -61,12 +61,21 @@
           </div>
 
           <!-- Image Filters -->
-          <div class="row center-align">
+          <div class="row center-align hide-on-small-only">
             <button class="btn waves-effect orange darken-1" id="invert">Invert</button>
             <button class="btn waves-effect orange darken-1" id="greyscale">Greyscale</button>
             <button class="btn waves-effect orange darken-1" id="vibrant">Vibrant</button>
+            <button class="btn waves-effect orange darken-1" id="nightvision">NightVision</button>
             <button class="btn waves-effect red" id="revert">Revert to Original</button>
-
+          </div>
+          <div class="row center-align hide-on-med-and-up">
+            <button class="btn waves-effect orange darken-1" id="invert">Invert</button>
+            <button class="btn waves-effect orange darken-1" id="greyscale">Greyscale</button>
+            <button class="btn waves-effect orange darken-1" id="vibrant">Vibrant</button>
+          </div>
+          <div class="row center-align hide-on-med-and-up">
+            <button class="btn waves-effect orange darken-1" id="nightvision">NightVision</button>
+            <button class="btn waves-effect red" id="revert">Revert to Original</button>
           </div>
 
           <!-- File Functions -->
