refactor: Canvas Panel tweak

--- a/_src/index.html
+++ b/_src/index.html
@@ -24,7 +24,7 @@
         </div>
       </div>
       <div class="row">
-        <canvas id="memeSpace" class="col s12 grey darken-3">
+        <canvas id="memeSpace" class="col s12 grey darken-3 z-depth-1">
           Sorry... Your browser doesn't support canvas... Try Googling "Chrome".
         </canvas>
       </div>
