refactor: minor display fixes

--- a/_src/index.html
+++ b/_src/index.html
@@ -15,6 +15,7 @@
   <script src="js/imageManips.js"></script>
   <title>Meme... He said Meeemeee.</title>
 </head>
+
 <body class="grey darken-2">
   <div class="container">
     <div class="section">
@@ -74,17 +75,17 @@
           <!-- File Functions -->
           <div class="row hide-on-small-only">
             <div class="col s12">
-                <div class="file-field input-field col s8 m6">
-                  <div class="btn red">
-                    <span>File</span>
-                    <input type="file" capture="camera" id="fileInput" name="imageLoader">
-                  </div>
-                  <div class="file-path-wrapper">
-                    <input class="file-path validate" type="text">
-                  </div>
+              <div class="file-field input-field col s8 m6">
+                <div class="btn red">
+                  <span>File</span>
+                  <input type="file" capture="camera" id="fileInput" name="imageLoader">
                 </div>
+                <div class="file-path-wrapper">
+                  <input class="file-path validate" type="text">
+                </div>
+              </div>
               <div class="right">
-                <button class="waves-effect btn red" href="" id="img-download" download="you-got-memed.png">
+                <button class="waves-effect btn-large red" href="" id="img-download" download="you-got-memed.png">
                   <i class="fa fa-download right"></i>download</button>
               </div>
             </div>
@@ -92,22 +93,21 @@
 
           <div class="row hide-on-med-and-up">
             <div class="row">
-                <div class="file-field input-field col s10 push-s1">
-                  <div class="btn red">
-                    <span>File</span>
-                    <input type="file" capture="camera" id="fileInput" name="imageLoader">
-                  </div>
-                  <div class="file-path-wrapper">
-                    <input class="file-path validate" type="text">
-                  </div>
+              <div class="file-field input-field col s10 push-s1">
+                <div class="btn red">
+                  <span>File</span>
+                  <input type="file" capture="camera" id="fileInput" name="imageLoader">
+                </div>
+                <div class="file-path-wrapper">
+                  <input class="file-path validate" type="text">
                 </div>
               </div>
-              <div class="row">
-                <div class="col s12">
-                  <div class="center-align">
-                <a class="waves-effect btn red" href="" id="img-download" download="you-got-memed.png">
-                  <i class="fa fa-download right"></i>download</a>
-                </div>
+            </div>
+            <div class="row">
+              <div class="col s12">
+                <div class="center-align">
+                  <a class="waves-effect btn-large red" href="" id="img-download" download="you-got-memed.png">
+                    <i class="fa fa-download right"></i>download</a>
                 </div>
               </div>
             </div>
@@ -115,7 +115,7 @@
         </div>
       </div>
     </div>
-    <span id="spinner-div" style="display:none"><img src='img/key/spinner-128.gif' width='24' height='24' id='spinner'/></span>
+  </div>
   </div>
 
   <footer class="page-footer grey darken-4">
